--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,11 +12,11 @@ quarkus.http.port=8081
 quarkus.http.cors=true
 quarkus.http.cors.origins=*
 
-quarkus.oidc.auth-server-url=http://localhost:6080/auth/realms/devtenant1
+quarkus.oidc.auth-server-url=http://haccp-iam:6080/auth/realms/devtenant1
 quarkus.oidc.client-id=backend-service
 
 quarkus.oidc.tls.verification=none
-auth-server-url.format=http://localhost:6080/auth/realms/%s
+auth-server-url.format=http://haccp-iam:6080/auth/realms/%s
 quarkus.swagger-ui.always-include=true
 
 quarkus.smallrye-openapi.security-scheme=oidc
